Remove use of java.endorsed.dirs since causes errors when starting with Java 9. Users that need to can still use this via setenv.sh
git-svn-id: https://svn.apache.org/repos/asf/tomcat/trunk@1653475 13f79535-47bb-0310-9956-ffa450edef68